--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "@dcloudio/uni-quickapp-native": "^2.0.0-31420210305001",
     "@dcloudio/uni-quickapp-webview": "^2.0.0-31420210305001",
     "@dcloudio/uni-stat": "^2.0.0-31420210305001",
+    "@dcloudio/uni-ui": "^1.2.12",
     "@vue/shared": "^3.0.0",
     "core-js": "^3.6.5",
     "flyio": "^0.6.2",
@@ -74,6 +75,16 @@
     "@dcloudio/vue-cli-plugin-uni-optimize": "^2.0.0-31420210305001",
     "@dcloudio/webpack-uni-mp-loader": "^2.0.0-31420210305001",
     "@dcloudio/webpack-uni-pages-loader": "^2.0.0-31420210305001",
+    "@vue/eslint-config-standard": "^4.0.0",
+    "babel-eslint": "^10.1.0",
+    "eslint": "^7.7.0",
+    "eslint-config-standard": "^14.1.1",
+    "eslint-plugin-html": "^6.0.3",
+    "eslint-plugin-import": "^2.22.0",
+    "eslint-plugin-node": "^11.1.0",
+    "eslint-plugin-promise": "^4.2.1",
+    "eslint-plugin-standard": "^4.0.1",
+    "eslint-plugin-vue": "^6.2.2",
     "@vue/cli-plugin-babel": "~4.5.0",
     "@vue/cli-service": "~4.5.0",
     "babel-plugin-import": "^1.11.0",
@@ -82,6 +93,9 @@
     "mini-types": "*",
     "miniprogram-api-typings": "*",
     "postcss-comment": "^2.0.0",
+    "sass": "^1.32.8",
+    "sass-loader": "^8.0.2",
+    "node-sass": "^4.14.1",
     "vue-template-compiler": "^2.6.11"
   },
   "browserslist": [
