--- a/project.private.config.json
+++ b/project.private.config.json
@@ -1,4 +1,5 @@
 {
+  "setting": {},
   "condition": {
     "plugin": {
       "list": []
@@ -14,6 +15,24 @@
         {
           "name": "pages/recorder/index",
           "pathName": "pages/recorder/index",
+          "query": "",
+          "scene": null
+        },
+        {
+          "name": "pages/select/index",
+          "pathName": "pages/select/index",
+          "query": "",
+          "scene": null
+        },
+        {
+          "name": "pages/datePicker/index",
+          "pathName": "pages/datePicker/index",
+          "query": "",
+          "scene": null
+        },
+        {
+          "name": "pages/header/index",
+          "pathName": "pages/header/index",
           "scene": null
         }
       ]
